<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ControlBulb</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="daily_live">Daily Live</string>
    <string name="sleep">Night Sleep</string>
    <string name="work">Work or Study</string>
    <string name="love">Romantic Love</string>
    <string name="music">Music Time</string>
    <string name="party">Party Entertainment</string>
    <string name="rest">Break Time</string>
    <string name="control_bulb">Controllor</string>
    <string name="control">setParam</string>
    <string name="timer">Timer</string>
    <string name="find">find device</string>
    <string name="mode">select mode</string>
    <string name="scanning">scanning for devices</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>
    <string name="title_activity_set_light_param">SetLightParamActivity</string>
    <string name="light_intensity">Light Intensity: </string>
    <string name="light_intensity_value">   10</string>
    <string name="light_color">Light Color: </string>
    <string name="light_color_value"></string>
    <string name="get_target_light">Choose Target Bulb</string>
    <string name="connected_device">Connected Devices</string>
    
    <string name="set_timer">Set Time</string>
    <string name="hour">H:</string>
    <string name="minute">M:</string>
    <string name="second">S</string>

</resources>