<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/set_light1"
    tools:context=".SetLightParamActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/light_intensity"
            android:paddingLeft="7dp"      
            android:textSize="@dimen/textSize"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/tv_lightIntensity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/light_intensity_value"
            android:textColor="#89c598"
            android:textSize="@dimen/textSize"
            android:textStyle="bold" />        
    </LinearLayout>
    
    <SeekBar
        android:paddingLeft="7dp" 
        android:paddingRight="7dp"
        android:id="@+id/lightIntensity_seekbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:max="100"
        android:progress="10"/>
    
     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/gap"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/light_color"
            android:paddingLeft="7dp"       
            android:textSize="@dimen/textSize"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/tv_lightColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/light_color_value"
            android:textColor="#89c598"
            android:textSize="@dimen/textSize"
            android:textStyle="bold" />        
    </LinearLayout>
    
     <com.example.controlbulb.ColorPickerView 
         android:id="@+id/color_picker_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="17dp"/>
    
   
    
     

</LinearLayout>