<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/hour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="Hour"
            android:inputType="number"
            android:textSize="@dimen/textSize"
            android:textStyle="bold"
            android:typeface="monospace" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hour"
            android:textSize="@dimen/textSize"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/minute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:hint="Min"
            android:inputType="number"
            android:textSize="@dimen/textSize"
            android:textStyle="bold"
            android:typeface="monospace" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/minute"
            android:textSize="@dimen/textSize"
            android:textStyle="bold" />

        <EditText
             android:id="@+id/second"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:hint="Sec"
            android:inputType="number"
            android:textSize="@dimen/textSize"
            android:textStyle="bold"
            android:typeface="monospace" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/second"
            android:textSize="@dimen/textSize"
            android:textStyle="bold" />
    </LinearLayout>
    
    <Button 
        android:id="@+id/btn_settimer"
        android:layout_marginTop="@dimen/gap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_timer"
        android:textSize="@dimen/textSize"
        android:alpha="0.7"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:background="#ff6501"
        android:textStyle="bold"/>

</LinearLayout>