<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/topbar"
    android:gravity="center_vertical"
    android:baselineAligned="false"
    android:orientation="horizontal" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical" >

        <ImageButton
            android:contentDescription="@string/mode"
            android:id="@+id/img_btn_setup_mode"
            android:layout_width="@dimen/pictureSize"
            android:layout_height="@dimen/pictureSize"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:background="@drawable/setup1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/control_bulb"
            android:textColor="#ffffff"
            android:textSize="@dimen/textSize"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" >

        <ImageButton
            android:contentDescription="@string/find"
            android:id="@+id/img_btn_find_device"
            android:layout_width="@dimen/pictureSize"
            android:layout_height="@dimen/pictureSize"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="40dp"
            android:background="@drawable/find" />

    </LinearLayout>

</LinearLayout>