<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:background="#0000">
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">
        
        <RelativeLayout 
            android:id="@+id/daily_mode_catainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            
            <ImageButton
                android:id="@+id/img_btn_daily"
                android:layout_width="@dimen/pictureSize"
                android:layout_height="@dimen/pictureSize"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:background="@drawable/wakeup1"
                />
            
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/daily_live"
                android:textSize="@dimen/textSize"
                android:textColor="#ffffff"
                android:textStyle="bold"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/img_btn_daily"
                android:layout_marginLeft="@dimen/gap"
                />
        </RelativeLayout>
        
        <RelativeLayout 
            android:id="@+id/sleep_mode_catainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            
            <ImageButton
                android:id="@+id/img_btn_sleep"
                android:layout_width="@dimen/pictureSize"
                android:layout_height="@dimen/pictureSize"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:background="@drawable/sleep"
                />
            
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sleep"
                android:textSize="@dimen/textSize"
                android:textColor="#ffffff"
                android:textStyle="bold"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/img_btn_sleep"
                android:layout_marginLeft="@dimen/gap"
                />
        </RelativeLayout>
        
        <RelativeLayout 
            android:id="@+id/work_mode_catainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            
            <ImageButton
                android:id="@+id/img_btn_work"
                android:layout_width="@dimen/pictureSize"
                android:layout_height="@dimen/pictureSize"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:background="@drawable/working1"
                />
            
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/work"
                android:textSize="@dimen/textSize"
                android:textColor="#ffffff"
                android:textStyle="bold"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/img_btn_work"
                android:layout_marginLeft="@dimen/gap"
                />
        </RelativeLayout>
        <RelativeLayout 
            android:id="@+id/love_mode_catainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            
            <ImageButton
                android:id="@+id/img_btn_love"
                android:layout_width="@dimen/pictureSize"
                android:layout_height="@dimen/pictureSize"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:background="@drawable/love"
                />
            
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/love"
                android:textSize="@dimen/textSize"
                android:textColor="#ffffff"
                android:textStyle="bold"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/img_btn_love"
                android:layout_marginLeft="@dimen/gap"
                />
        </RelativeLayout>
        <RelativeLayout 
            android:id="@+id/music_mode_catainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            
            <ImageButton
                android:id="@+id/img_btn_music"
                android:layout_width="@dimen/pictureSize"
                android:layout_height="@dimen/pictureSize"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:background="@drawable/music"
                />
            
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/music"
                android:textSize="@dimen/textSize"
                android:textColor="#ffffff"
                android:textStyle="bold"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/img_btn_music"
                android:layout_marginLeft="@dimen/gap"
                />
        </RelativeLayout>
        
        <RelativeLayout 
            android:id="@+id/party_mode_catainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            
            <ImageButton
                android:id="@+id/img_btn_party"
                android:layout_width="@dimen/pictureSize"
                android:layout_height="@dimen/pictureSize"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:background="@drawable/party"
                />
            
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/party"
                android:textSize="@dimen/textSize"
                android:textColor="#ffffff"
                android:textStyle="bold"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/img_btn_party"
                android:layout_marginLeft="@dimen/gap"
                />
        </RelativeLayout>
        <RelativeLayout 
            android:id="@+id/rest_mode_catainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            
            <ImageButton
                android:id="@+id/img_btn_rest"
                android:layout_width="@dimen/pictureSize"
                android:layout_height="@dimen/pictureSize"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:background="@drawable/rest1"
                />
            
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rest"
                android:textSize="@dimen/textSize"
                android:textColor="#ffffff"
                android:textStyle="bold"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/img_btn_rest"
                android:layout_marginLeft="@dimen/gap"
                />
        </RelativeLayout>
        
    </LinearLayout>
</RelativeLayout>
